--- a/tramite-service-oauth/src/main/resources/application.properties
+++ b/tramite-service-oauth/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=servicio-oauth
 server.port=9100
+
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 config.security.oauth.client.id = frontendapp
 config.security.oauth.client.secret = 12345
